Implemented CSS-in-JS solution.

--- a/src/pages/config.json
+++ b/src/pages/config.json
@@ -12,7 +12,11 @@
       "timesUpInfoText": "Time's up!"
     },
     "multiplierSection": {
-      "multipliers": [1, 1.5, 2],
+      "multipliers": [
+        1,
+        1.5,
+        2
+      ],
       "defaultSelectedMultiplierIndex": 0
     }
   }
