--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "lint": "eslint --max-warnings=0 --ext js,jsx,ts,tsx src",
+    "fix": "run-s fix:*",
+    "fix:prettier": "prettier \"src/**/*.ts\" --write",
+    "fix:tslint": "tslint --fix --project .",
+    "test": "CI=true run-s test:*",
+    "test:unit": "react-scripts test",
+    "test:lint": "tslint --project . && prettier \"src/**/*.ts\" --list-different",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,11 +52,15 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/react-router-dom": "^5.1.8",
+    "npm-run-all": "^4.1.5",
+    "prettier": "2.3.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.2"
   }
 }
