--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -20,6 +19,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "sourceMap": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
