--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/react-router-dom": "^5.1.8",
+    "@types/redux-mock-store": "^1.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "2.3.2",
+    "redux-mock-store": "^1.5.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.2"
