--- a/package.json
+++ b/package.json
@@ -21,6 +21,20 @@
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/redux-mock-store": "^1.0.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "2.3.2",
+    "redux-mock-store": "^1.5.4",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.1.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -51,18 +65,24 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/redux-mock-store": "^1.0.3",
-    "npm-run-all": "^4.1.5",
-    "prettier": "2.3.2",
-    "redux-mock-store": "^1.5.4",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.1.2"
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!<rootDir>/node_modules/",
+      "!src/{react-app-env.d.ts,index.tsx}",
+      "!src/state/{index.ts,types.ts}",
+      "!src/state/action-creators/index.ts",
+      "!src/state/action-types/index.ts",
+      "!src/state/actions/index.ts",
+      "!src/state/reducers/index.ts"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 15,
+        "functions": 20,
+        "lines": 30,
+        "statements": 30
+      }
+    }
   }
 }
