--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,22 @@
-image: node
+image: node:17
 
-pages:
-  stage: deploy
+build:
+  stage: build
   cache:
     paths:
       - node_modules/
   script:
     - npm install
     - npm run build
+  artifacts:
+    paths:
+      - build
+
+pages:
+  stage: deploy
+  dependencies:
+    - build
+  script:
     - rm -rf public
     - cp -r * .build
     - mv .build public
