Replaced npm by yarn inside .gitlab-ci.yml.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ build:
     paths:
       - node_modules/
   script:
-    - npm install
-    - npm run build
+    - yarn install
+    - yarn run build
   artifacts:
     paths:
       - build
