Removed . from .build in deploy stage of .gitlab-ci.yml.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,8 @@ pages:
     - build
   script:
     - rm -rf public
-    - cp -r * .build
-    - mv .build public
+    - cp -r * build
+    - mv build public
   artifacts:
     paths:
       - public
