Changed gitlab-ci.yml to correctly copy the build into the public folder.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,7 @@ pages:
     - build
   script:
     - rm -rf public
-    - ls -l
-    - mv build public
+    - cp -a build/. public/
   artifacts:
     paths:
       - public
