--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,13 @@ pages:
   dependencies:
     - build
   script:
-    - rm -rf public
-    - cp -a build/. public/
+    - ls -l
+    - mkdir .public
+    - ls -l
+    - cp -r * .public
+    - ls -l
+    - mv .public public
+    - ls -l public
   artifacts:
     paths:
       - public
