Added logs to see why the deploy is failing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,9 +18,13 @@ pages:
     - build
   script:
     - pwd
+    - ls -l
     - rm -rf public
+    - ls -l
     - mkdir public
-    - cp -a build public
+    - ls -l
+    - cp build/* public
+    - ls -l public
   artifacts:
     paths:
       - public
