Added logs to see why the deploy is failing (2).

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,9 @@ pages:
   dependencies:
     - build
   script:
-    - pwd
-    - ls -l
     - rm -rf public
-    - ls -l
     - mkdir public
-    - ls -l
-    - cp build/* public
+    - mv -v build/* public
     - ls -l public
   artifacts:
     paths:
